# manman

./: .env.ci  .env.example  .env.stage  .gitignore  .pre-commit-config.yaml  .tiltignore  Dockerfile  LICENSE  MOCK_MODE.md  README.md  Tiltfile  alembic.ini  logging.ini  mypy.ini  mypy.ini.tempdisable  pyproject.toml  ruff.toml
.github/: copilot-instructions.md
.github/workflows/: copilot-instructions.md  openapi.yml  publish.yml  pytest.yml  test.yml  tilt-ci.yml
alembic/: env.py
alembic/versions/: 2024_04_27_1502-9d2c57a933ef_.py  2024_04_27_1524-28f0f4545d5e_.py  2024_04_27_1549-1c3486559710_init.py  2024_04_27_1733-0df8f684d1c7_init.py  2024_04_27_1735-5f6ffaa4b629_.cs2data.py  2024_04_27_1746-793f88201df6_.py  2024_04_27_1810-ebef1cd30fd9_.py  2024_04_27_1813-2d62be20d6bb_.py  2024_04_27_1819-8a5cb751b177_.py  2024_04_27_1849-81201ed06b73_.py  2024_04_27_1921-b47437d75324_.py  2024_04_28_1520-809ff0ead878_fix.py  2024_04_28_2239-41d8eaf3e817_test.py
charts/manman-host/: Chart.yaml  Makefile  TEST-README.md  test-chart.sh  test-integration.sh  test-pdb.sh  test-templates.sh  values.yaml
charts/manman-host/templates/: deployment.yaml  experience-api-deployment.yaml  experience-api-pdb.yaml  experience-api-service.yaml  ingress.yaml  internal-api-deployment.yaml  internal-api-pdb.yaml  internal-api-service.yaml  migration-job.yaml  service.yaml  status-api-deployment.yaml  status-api-pdb.yaml  status-api-service.yaml  status-processor-deployment.yaml  status-processor-pdb.yaml  worker-dal-api-deployment.yaml  worker-dal-api-pdb.yaml  worker-dal-api-service.yaml
charts/manman-host/test-output/: default-all-enabled.yaml
charts/manman-host/test-values/: all-enabled.yaml  dev-ingress.yaml  minimal.yaml  production.yaml
charts/rabbitmq-dev/: Chart.yaml  values.yaml
charts/rabbitmq-dev/templates/: service.yaml  statefulset.yaml
design/: initial-plan.md  initial_diagram.drawio  status-service-implementation.md  status-service-split.md
docs/: log-subscriber-service.md  rabbitmq-connection-recovery.md  ssl-connection-fix.md  tilt-ci.md
host/: README.md  pyproject.toml
host/src/manman/host/: __main__.py
manman/: __main__.py  api_client.py  commandbuilder.py  models.py  processbuilder.py  util.py
manman-host/: README.md  __main__.py  pyproject.toml
manman-worker/: README.md  __main__.py  pyproject.toml
manman/host/: __main__.py  api_client.py
manman/host/api/: __init__.py  injectors.py  request_models.py  server.py  worker.py
manman/worker/: __main__.py  server.py  service.py  steamcmd.py
scripts/: download-preserve-site.js  generate-docs-html.js  test-openapi.sh  test-tag-publish.sh  validate-tilt-ci.sh
src/manman/: __main__.py  api_client.py  config.py  exceptions.py  logging_config.py  models.py  processbuilder.py  util.py
src/manman/host/: asgi.py  log_subscriber.py  main.py  openapi.py  request_models.py  status_processor.py
src/manman/host/api/: __init__.py  experienceapi.py  hostapi.py  injectors.py  server.py  statusapi.py  worker.py
src/manman/host/api/experience/: __init__.py  api.py
src/manman/host/api/shared/: __init__.py  health.py  injectors.py  models.py
src/manman/host/api/status/: __init__.py  api.py
src/manman/host/api/worker_dal/: __init__.py  server.py  worker.py
src/manman/mock/: README.md  __init__.py  main.py  processbuilder.py  server.py  test_mock_tools.py  worker_service.py
src/manman/repository/: __init__.py  api_client.py  database.py  rabbit.py  rabbitmq.py  rmq.py  workerdal.py
src/manman/repository/message/: abstract_interface.py  pub.py  sub.py
src/manman/repository/rabbitmq/: __init__.py  abstract_legacy.py  base.py  config.py  connection.py  publisher.py  subscriber.py  util.py
src/manman/shared/: __init__.py  config.py
src/manman/worker/: abstract_service.py  main.py  processbuilder.py  server.py  service.py  steamcmd.py  worker_service.py
src/migrations/: env.py
src/migrations/versions/: 2024_04_27_1733-0df8f684d1c7_init.py  2024_04_27_1735-5f6ffaa4b629_.cs2data.py  2024_04_27_1810-ebef1cd30fd9_.py  2024_04_27_1813-2d62be20d6bb_.py  2024_04_27_1819-8a5cb751b177_.py  2024_04_27_1921-b47437d75324_.py  2024_04_28_1520-809ff0ead878_fix.py  2025_02_24_2158-f22d61deac49_.py  2025_03_16_0059-86b5da41e9f8_.py  2025_05_05_1854-3427e52b10ce_.py  2025_05_18_1949-7fb64ceb4da2_.py  2025_05_24_2215-d5ce82ad21d2_.py  2025_05_25_1106-997d31da4c5c_.py
test_shared/: README.md  pyproject.toml
test_shared/src/manman/test_shared/: sample.py
tests/: conftest.py  test_connection_recovery_integration.py  test_database_repository.py  test_experience_api.py  test_idle_connection_handling.py  test_internal_api.py  test_message_services_with_mocks.py  test_mock_implementations.py  test_mock_infrastructure_examples.py  test_mock_message_interfaces.py  test_robust_connection.py  test_server_status.py  test_simple_status.py  test_ssl_connection_fixes.py  test_ssl_parameter_propagation_fixes.py  test_status_api.py  test_status_processor.py  test_status_processor_improved.py  test_status_service_split.py  test_subscriber_multiple_exchanges.py  test_validator.py  test_worker_dal_api.py  test_worker_heartbeat.py  test_worker_shutdown_cascade.py
tests/repository/rabbitmq/: test_util.py
worker/: README.md  pyproject.toml
