[project]
name = "manman"
version = "0.1.0"
description = "([cs2/game]server)man(ager)man(ager)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.1",
    "fastapi>=0.115.8",
    "pika>=1.3.2",
    "psycopg2-binary>=2.9.10",
    "python-jose>=3.4.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.38",
    "sqlmodel>=0.0.22",
    "typer>=0.15.1",
    "uvicorn>=0.34.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
host = "manman.host.main:app"
worker = "manman.worker.main:app"

[tool.ruff.lint]
extend-select = ["I"]
