[project]
name = "manman"
version = "0.1.0"
description = "([cs2/game]server)man(ager)man(ager)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.14.1",
    "amqpstorm[management]>=2.11.0",
    "fastapi>=0.115.8",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-distro>=0.50b0",
    "opentelemetry-exporter-otlp>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "psycopg2-binary>=2.9.10",
    "python-jose>=3.4.0",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.38",
    "sqlmodel>=0.0.22",
    "typer[slim]>=0.15.3",
    "uvicorn>=0.34.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.25.0",  # For testing FastAPI endpoints
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
host = "manman.host.main:app"
worker = "manman.worker.main:app"

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers"
testpaths = [
    "tests",
]
pythonpath = [
    "src",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]

[dependency-groups]
dev = [
    "amqpstorm[management]>=2.11.0",
    "httpx>=0.28.1",
    "pytest>=8.3.5",
    "pytest-cov>=6.1.1",
    "pytest-xdist>=3.6.1",
]
