[tool.poetry]
name = "manman-host"
version = "0.0.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "manman", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.3"
isort = { version="^5.13.2", optional = true }
black = { version = "^23.12.1", optional = true }
manman-test_shared = { path = "../test_shared", develop = true} # sadly doesn't auto update, but whatever

[tool.poetry.extras]
dev = ["isort", "black"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

