[tool.poetry]
name = "manman-host"
version = "0.1.0"
description = ""
authors = ["qmastermoo <alex.harding@whale-net.net>"]
readme = "README.md"
# why does this work :/
packages = [{ include = "../manman-host" }]
exclude = ['__pycache__/*', '.venv/*']

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.3"
isort = { version="^5.13.2", optional = true }
black = {version = "^23.12.1", optional = true}
flake8 = "^6.1.0"

[tool.poetry.extras]
develop = ["isort", "black"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

