[tool.poetry]
name = "manman-worker"
version = "0.0.0"
description = ""
authors = []
readme = "README.md"
packages = [{include = "manman", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.5.3"
SQLAlchemy = "^2.0.24"
black = {version = "^23.12.1", optional = true}
isort = {version = "^5.13.2", optional = true}

[tool.poetry.extras]
dev = ["isort", "black"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
